--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "repository": "https://github.com/ebi-yade/jex",
   "author": "市川恭佑 <github@mail.ebi-yade.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@parcel/config-webextension": "^2.9.2",
+    "parcel": "^2.9.2"
+  },
+  "dependencies": {
+    "webextension-polyfill": "^0.10.0"
+  }
 }
