--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "webextension-polyfill": "^0.10.0"
+  },
+  "scripts": {
+    "start": "parcel watch src/manifest.json --host localhost --config @parcel/config-webextension",
+    "build": "parcel build src/manifest.json --config @parcel/config-webextension"
   }
 }
