Implement the first prototype

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,6 +20,16 @@
     "service_worker": "background.js",
     "type": "module"
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://*/*"
+      ],
+      "js": [
+        "content.js"
+      ]
+    }
+  ],
   "permissions": [
     "activeTab",
     "contextMenus",
